# Quack

./: CMakeLists.txt  README.md
src/: Game.cpp  Game.h  main.cpp
src/Component/: AIComponent.h  CollisionComponent.h  GameRuleComponent.h  GameStateComponent.h  InputComponent.h  MovementComponent.h  PawnComponent.h  PlayeStateComponent.h  PlayerComponent.h  PlayerStateComponent.h  SoundComponent.h  SpritesComponent.h  TransformComponent.h  VelocityComponent.h
src/Core/: AssetManager.cpp  AssetManager.h  CollisionLayers.h  ComponentManager.h  Coordinator.h  EntityManager.cpp  EntityManager.h  IComponentArray.h  SpatialGrid.cpp  SpatialGrid.h  System.h  SystemManager.h  Types.h
src/Factory/: EntityFactory.cpp  EntityFactory.h
src/Games/Quack/: QKCollisionLayer.h
src/Scene/: IScene.h  SceneManager.cpp  SceneManager.h
src/Systems/: CollisionSystem.cpp  CollisionSystem.h  GridMovementSystem.cpp  GridMovementSystem.h  InputSystem.cpp  InputSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h
src/Utils/: CollisionUtils.h  MathUtils.cpp  MathUtils.h
src/Windows/: GameScreen.cpp  GameScreen.h
